# online_learning

./: .travis.yml  LICENSE  README.md
bayes_people_tracker/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
bayes_people_tracker/config/: detectors.yaml  detectors_withnewparams.yaml  object3d_detector.yaml  object3d_detector_ol.yaml  object3d_detector_ol_ms.yaml  object3d_detector_ol_ms_yolo.yaml
bayes_people_tracker/include/people_tracker/: asso_exception.h  flobot_tracking.h  people_tracker.h
bayes_people_tracker/launch/: bayes_people_tracker.launch  bayes_people_tracker.rviz  people_tracker.launch
bayes_people_tracker/msg/: PeopleTracker.msg
bayes_people_tracker/src/people_tracker/: people_tracker.cpp
bayestracking/: CHANGELOG.rst  CMakeLists.txt  Doxyfile.in  LICENCE  README.md  package.xml
bayestracking/config/: BayestrackingConfig.cmake.in  bayestracking.pc.in
bayestracking/examples/: CMakeLists.txt  simple_2d_tracking.cpp
bayestracking/include/bayes_tracking/: angle.h  associationmatrix.h  ekfilter.h  jacobianmodel.h  jpda.h  models.h  multitracker.h  pfilter.h  synchronizer.h  trackwin.h  ukfilter.h
bayestracking/include/bayes_tracking/BayesFilter/: CIFlt.hpp  SIRFlt.hpp  UDFlt.hpp  allFilters.hpp  bayesException.hpp  bayesFlt.hpp  covFlt.hpp  infFlt.hpp  infRtFlt.hpp  itrFlt.hpp  matSup.hpp  matSupSub.hpp  models.hpp  random.hpp  schemeFlt.hpp  uBLASmatrix.hpp  uLAPACK.hpp  unsFlt.hpp
bayestracking/include/bayes_tracking/BayesFilter/filters/: average1.hpp  indirect.hpp
bayestracking/src/bayes_tracking/: associationmatrix.cpp  ekfilter.cpp  models.cpp  pfilter.cpp  trackwin.cpp  ukfilter.cpp
bayestracking/src/bayes_tracking/BayesFilter/: CIFlt.cpp  SIRFlt.cpp  UDFlt.cpp  UdU.cpp  bayesFlt.cpp  bayesFltAlg.cpp  covFlt.cpp  infFlt.cpp  infRtFlt.cpp  itrFlt.cpp  matSup.cpp  unsFlt.cpp
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros/config/: ros.yaml  yolov2-tiny.yaml  yolov2.yaml  yolov3.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
object3d_detector/: CMakeLists.txt  README.md  package.xml
object3d_detector/config/: object3d_detector.yaml  object3d_detector_ol.yaml  object3d_detector_ol_ms.yaml
object3d_detector/launch/: object3d_detector.launch  object3d_detector.rviz  object3d_detector_ol.launch  object3d_detector_ol.rviz  object3d_detector_ol_ms.launch  object3d_detector_ol_ms.rviz
object3d_detector/libsvm/: README.md  grid.py  pedestrian.range
object3d_detector/model/: pedestrian.model
object3d_detector/src/: object3d_detector.cpp  object3d_detector_ol.cpp
online_learning/: CMakeLists.txt  package.xml
online_learning/launch/: object3d_detector_ol.launch  object3d_detector_ol.rviz  object3d_detector_ol_ms.launch  object3d_detector_ol_ms.rviz  object3d_detector_ol_ms_yolo.launch
people_yolo_angle_package/: CMakeLists.txt  package.xml
people_yolo_angle_package/launch/: object3d_yolo.launch  object3d_yolo_record.launch  only_resize.launch  only_yolo.launch  testing.launch
people_yolo_angle_package/scripts/: people_position.py  sim_yolo_detector.py
